[FIX] hidden 시 overflow 현상 수정

--- a/css/style.css
+++ b/css/style.css
@@ -275,9 +275,10 @@ textarea:focus {
 
 /* function */
 .hidden {
-    width: 0 !important;
-    height: 0 !important;
-    margin: 0 0 !important;
-    padding: 0 0 !important;
+    width: 0px !important;
+    height: 0px !important;
+    margin: 0px 0px !important;
+    padding: 0px 0px !important;
+    overflow: hidden;
     visibility: hidden;
 }
